# cs4414-encryption

./: CMakeLists.txt  bignum  bignum.cpp  bignum.hpp  decrypt_report  encrypt_report  instructions.txt  main.cpp  myreport  operation.cpp  operation.hpp
test/: output.txt
test/cake/: cake.txt
test/poem/: output.txt
test/simple/: output.txt
